# Nagarami

./: CMakeLists.txt  README.md
src/: .nagarami.h.swp  .resource.h.swp  CMakeLists.txt  Nagarami.ps  apiwrapper.cpp  component.cpp  execute.cpp  helper.cpp  helpertest.cpp  import.cpp  main.cpp  nagarami.h  nagaramitest.cpp  nagaramitest.h  resource.h  resource.rc  systemobject.cpp  window.cpp
src/test/: apiwrappertest.cpp  componenttest.cpp  helpertest.cpp  maintest.cpp  nagaramitest.cpp  nagaramitest.h  systemobjecttest.cpp
